--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ main {
 input {
   padding: 12px 18px;
   border: 0.8px solid #797979;
+  border-radius: 4px;
 }
 
 input::selection {
@@ -61,8 +62,18 @@ button:hover {
 .wishes-display {
   margin-top: 5rem;
   margin-bottom: 5rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .wishes-display > p {
   color: #797979;
+  font-size: 1.2rem;
+}
+
+.fa-file {
+  color: #797979;
+  margin-bottom: 0.5rem;
 }
