--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ input::selection {
 
 .input-div {
   display: flex;
-  gap: 8px;
+  gap: 0.5rem;
 }
 
 button {
@@ -60,8 +60,8 @@ button:hover {
 }
 
 .wishes-display {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 80px;
+  margin-bottom: 80px;
 
   display: flex;
   flex-direction: column;
@@ -75,5 +75,5 @@ button:hover {
 
 .fa-file {
   color: #797979;
-  margin-bottom: 0.5rem;
+  margin-bottom: 8px;
 }
